<resources>
    <string name="app_name">Currency Converter</string>
    <string name="converter">Converter</string>

    <!--Converter screen-->
    <string name="change_currency">button to change currency</string>
    <string name="money_input">Input</string>
    <string name="convert_result">Result</string>
    <string name="currency_image">currency image</string>
    <string name="result_currency_text_format">%1$s %2$s  </string>
    <string name="base_currency_text_format">%1$s %2$s =</string>
    <string name="no_input_error">Please enter a value</string>
    <string name="enter_a_value">Enter a value</string>
    <string name="last_input">Last input</string>
    <string name="error_image">error_image</string>
    <string name="refresh">Refresh</string>
    <string name="error_message">Something went wrong. Please check internet connection or try again after a minute</string>

    <!--Settings screen-->
    <string name="back_button">back button</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>


    <!--Recycler view item-->
    <string name="default_text_recycler_view">Australian Dollar • AUD</string>
    <string name="currency_text_recycler_view">%1$s • %2$s</string>
    <string name="flag">flag</string>

    <!--Search screen-->
    <string name="clear_button">clear button</string>
    <string name="search">Search</string>

    <string name="rub">Russian Ruble</string>
    <string name="usd">US Dollar</string>
    <string name="eur">Euro</string>
    <string name="aud">Australian Dollar</string>
    <string name="brl">Brazilian Real</string>
    <string name="byn">Belarusian Ruble</string>
    <string name="cad">Canadian Dollar</string>
    <string name="cny">Chinese Yuan</string>
    <string name="egp">Egyptian Pound</string>
    <string name="bgp">British Pound Sterling</string>
    <string name="gel">Georgian Lari</string>
    <string name="ils">Israeli New Sheqel</string>
    <string name="inr">Indian Rupee</string>
    <string name="jpy">Japanese Yen</string>
    <string name="krw">South Korean Won</string>
    <string name="kzt">Kazakhstani Tenge</string>
    <string name="mxn">Mexican Peso</string>
    <string name="sar">Saudi Riyal</string>
    <string name="thb">Thai Baht</string>
    <string name="uzs">Uzbekistan Som</string>
    <string name="btc">Bitcoin</string>

    <!--History screen-->
    <string name="history">History</string>
    <string name="arrow">arrow</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_any_conversion_yet">You haven`t done any conversion yet</string>


</resources>