<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ConverterFragment">

    <ImageButton
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/change_currency"
        android:src="@drawable/convert_currency"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/start_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius_large"
        app:boxCornerRadiusBottomStart="@dimen/input_corner_radius_large"
        app:boxCornerRadiusTopEnd="@dimen/input_corner_radius_large"
        app:boxCornerRadiusTopStart="@dimen/input_corner_radius_large"
        app:hintTextColor="@color/grey"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/convert_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:imeOptions="actionGo"
            android:id="@+id/start_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_bg"
            android:digits="1234567890."
            android:inputType="numberDecimal"
            android:maxLength="14"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/clear_button_margin_end"
        android:layout_marginTop="@dimen/clear_button_margin_top"
        app:layout_constraintBottom_toBottomOf="@+id/start_input_layout"
        app:layout_constraintTop_toTopOf="@id/start_input_layout"
        app:layout_constraintEnd_toEndOf="@id/start_input_layout"
        android:visibility="gone"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/clear_button"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

    <LinearLayout
        android:id="@+id/linear_lay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height"
        android:layout_marginBottom="@dimen/margin_input_and_flags"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/convert_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/left_currency"
            android:layout_width="@dimen/flag_long_side"
            android:layout_height="@dimen/flag_short_side"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/flag_corner_radius">

            <ImageView
                android:id="@+id/left_currency_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:contentDescription="@string/currency_image"
                android:scaleType="centerCrop" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/right_currency"
            android:layout_width="@dimen/flag_long_side"
            android:layout_height="@dimen/flag_short_side"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            app:cardCornerRadius="@dimen/flag_corner_radius">

            <ImageView
                android:id="@+id/right_currency_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/blue"
                android:contentDescription="@string/currency_image"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


    <ImageButton
        android:id="@+id/swap_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="false"
        android:contentDescription="@string/change_currency"
        android:src="@drawable/white_circle"
        app:layout_constraintBottom_toBottomOf="@+id/linear_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linear_lay" />

    <ImageButton
        android:id="@+id/swap_currencies_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/change_currency"
        android:src="@drawable/swap_currencies"
        app:layout_constraintBottom_toBottomOf="@+id/linear_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linear_lay" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/navigation_buttons_margin"
        android:layout_marginEnd="@dimen/navigation_buttons_margin"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/base_currency_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/navigation_buttons_margin"
        android:paddingEnd="86dp"
        android:textAlignment="viewEnd"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/start_input_layout"
        tools:text="1234567890123456" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/clear_button_margin_end"
        android:paddingEnd="86dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/soft_black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/base_currency_text_view"
        tools:text="1234567890123456" />

</androidx.constraintlayout.widget.ConstraintLayout>